deployments/test-container/stg/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-container--stg
  namespace: test-container
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: test-container--stg
