deployments/test-container/stg/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  test-container--stg
  namespace: test-container
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://auth--test-cluster.elifesciences.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth--test-cluster.elifesciences.org/oauth2/start?rd=https%3A%2F%2F$host$request_uri"
spec:
  rules:
  - host: test-container--stg.elifesciences.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-container--stg
            port:
              number: 8000
